--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -2,11 +2,13 @@
 {
     width: 100%;
     height: 500px;
-    margin-top: 30px
+    margin-top: 30px;
+    padding: 10px;
+    
 }
 .profile-image
 {
-    
+    padding: 10px;
 }
 .avatar
 {
@@ -17,4 +19,22 @@
   border-radius: 50%;
   box-shadow: 0 6px 10px 10px rgba(0, 0, 0, 0.2), 0 8px 20px 10px rgba(0, 0, 0, 0.19);
   padding: 5px;
+}
+h1{
+    margin-top: 17px;
+    font-size: 50px;
+    font-family: 'Bai Jamjuree', sans-serif;
+    font-weight: bold;
+}
+p{
+    font-family: 'Tinos', serif;
+    margin-top: 15px;
+    font-size: 19px;
+}
+
+.wave
+{
+    font-size: x-large;
+    color: #8f19cf;
+    font-weight: bold;
 }
