--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -25,10 +25,30 @@ h1{
     font-size: 50px;
     font-family: 'Bai Jamjuree', sans-serif;
     font-weight: bold;
+    color: #fff;
+		background: linear-gradient(to right, #ff0000 10%,  #8f19cf 50%);
+		background-size: auto auto;
+		background-clip: border-box;
+		background-size: 200% auto;
+		color: #fff;
+		background-clip: text;
+		text-fill-color: transparent;
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+		animation: textclip 1.5s linear infinite;
+		display: inline-block;
+    
 }
+
+@keyframes textclip {
+	to {
+		background-position: 200% center;
+	}
+}
+
 p{
     font-family: 'Tinos', serif;
-    margin-top: 15px;
+    margin-top: 17px;
     font-size: 19px;
 }
 
@@ -37,4 +57,19 @@ p{
     font-size: x-large;
     color: #8f19cf;
     font-weight: bold;
+}
+
+.projects
+{
+    width: 100%;
+    height: 500px;
+    
+}
+
+@media (max-width: @screen-xs) {
+    body{font-size: 10px;}
+}
+
+@media (max-width: @screen-sm) {
+    body{font-size: 14px;}
 }
