--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -68,7 +68,6 @@ p{
 .myprojects
 {
     width: 100%;
-    height: 800px;
 }
 .icon-down
 {
@@ -81,8 +80,41 @@ p{
   -o-animation: bounce 1s infinite linear;
   -webkit-animation: bounce 1s infinite linear;
   animation: bounce 1s infinite linear;
-  colr:000;
+  color:000;
 }
+
+.display-pic
+{
+    width: 20%;
+    height: 100px;
+    margin: 15px auto;
+}
+.card-hi
+{
+    padding: 15px;
+}
+
+h4
+{
+    margin-top: 20px;
+    font-family: 'Tinos', serif;
+    font-weight: bold;
+    color: #8f19cf;
+}
+
+button{
+    margin: 10px;
+    margin-left: 40px;
+    margin-right: 40px;
+    height: 55px;
+    background-color: #8f19cf;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border-radius: 20px;
+    font-family: 'Tinos', serif;
+    color: white;
+}
+
 
 @-webkit-keyframes bounce {
     0% { top: 0; }
@@ -131,10 +163,17 @@ p{
     }
   }
 
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 40%;
+    border-radius: 5px;
+  }
+
 
   @media only screen and (max-width: 700px) {
     p{
-    font-size: 15px;
+    font-size: 17px;
     }
     h1
     {
@@ -153,4 +192,5 @@ p{
     margin-top: 10px;
     
     }
+   
   }
