--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -102,18 +102,24 @@ h4
     color: #8f19cf;
 }
 
-button{
-    margin: 10px;
-    margin-left: 40px;
-    margin-right: 40px;
-    height: 55px;
-    background-color: #8f19cf;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    border-radius: 20px;
+.button {
+    margin: 18px auto;
+    width: 250px;
+    cursor: pointer;
+    font-size: 110%;
+    background: #3366cc;
+    color: #fff;
+    border: 1px solid #3366cc;
+    border-radius: 10px;
+    height: 60px;
     font-family: 'Tinos', serif;
+    }
+
+    .button:hover {
     color: white;
-}
+    background: #ff0000;
+    border: 1px solid #fff;
+    }
 
 
 @-webkit-keyframes bounce {
@@ -156,6 +162,11 @@ button{
     {
         font-size: 45px;
     }
+
+    .projects
+    {
+        margin-top: 70px;
+    }
     .avatar
     {
         width: 250px;
@@ -171,26 +182,4 @@ button{
   }
 
 
-  @media only screen and (max-width: 700px) {
-    p{
-    font-size: 17px;
-    }
-    h1
-    {
-        font-size: 35px;
-    }
-
-    .avatar
-    {
-        width: 220px;
-        height: 220px;
-    }
-
-    .projects
-    {
-    
-    margin-top: 10px;
-    
-    }
-   
-  }
+  
