--- a/src/footer.css
+++ b/src/footer.css
@@ -1,14 +1,14 @@
 .footer
 {
     width: 100%;
-    height : 150px;
     padding-top: 15px;
 }
 .main-footer
 {
     margin-top: 20px;
-    background-color: #cabdcf;
-    height : 150px;
+    background-color: #dbcfe0;
+    position: relative;
+    bottom: 0;
 }
 .fafa {
     padding: 20px;
@@ -22,9 +22,9 @@
 
   .fafafa
   {
-    margin: 5px 10px;
+    margin: 5px 5px;
     font-size: 20px;
-    color: #ce4141;
+    color: #fa0000;
   }
   
   .fafa:hover {
