--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -120,6 +120,18 @@ h4
     border: 1px solid #fff;
     }
 
+    .main
+    {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+    }
+
+    .my-content
+    {
+        flex: 1;
+    }
+
 
 @-webkit-keyframes bounce {
     0% { top: 0; }
