--- a/src/footer.css
+++ b/src/footer.css
@@ -6,7 +6,7 @@
 .main-footer
 {
     margin-top: 20px;
-    background-color: #dbcfe0;
+    background-color: var(--footerback);
     position: relative;
     bottom: 0;
 }
@@ -54,6 +54,10 @@
   .bottom
   {
     font-family: 'Tinos', serif;
+  }
+  .madeby
+  {
+    color: var(--madefooter);
   }
 
   @media only screen and (max-width: 800px) {
