--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -1,10 +1,19 @@
+.main{
+    background-color: var(--background);
+}
+.mydark
+{
+    margin: 20px;
+}
 .about-me
 {
     width: 100%;
     height: 500px;
-    margin-top: 30px;
-    padding: 10px;
     
+}
+.intropara
+{
+    color: var(--text)
 }
 .profile-image
 {
@@ -12,6 +21,7 @@
 }
 .avatar
 {
+    border: 6px solid #1b1a1a;
   border: 6px solid #8f19cf;
   vertical-align: middle;
   width: 270px;
@@ -81,7 +91,6 @@ p{
   animation: bounce 2s infinite linear;
   color:000;
 }
-
 .display-pic
 {
     width: 27%;
@@ -92,6 +101,7 @@ p{
 {
     padding: 15px;
     margin-top: 25px;
+    background-color: var(--cardbackground);
 }
 
 h4
