--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -3,7 +3,10 @@
 }
 .mydark
 {
-    margin: 20px;
+    margin-top: 20px;
+    margin-right: 30px;
+
+    
 }
 .about-me
 {
@@ -195,6 +198,23 @@ h4
         width: 250px;
         height: 250px;
     }
+  }
+
+  @media only screen and (max-width: 1024px) {
+
+    .button {
+        margin: 18px auto;
+        width: 200px;
+        cursor: pointer;
+        font-size: 95%;
+        background: #8f19cf;
+        color: #fff;
+        border: 1px solid #8f19cf;
+        border-radius: 10px;
+        height: 50px;
+        font-family: 'Tinos', serif;
+        }
+   
   }
 
   @media only screen and (max-width: 700px) {
